<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FJ KEY</string>
    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
    <string name="lock_open">开锁</string>
    <string name="lock_close">关锁</string>
    <string name="notice">
1.	为确保安全，驾驶电动车者，必须持有驾照；\n
2.	驾驶电动车出行时，切记遵守交规，一旦发生违章，驾驶员承担全部责任；\n
3.	电动车是为了方便工作中出行方便，不可用于私人办事需求；\n
4.	远程开锁APP可实现车辆解锁，启动车辆仍需钥匙启动，车辆钥匙放置在驾驶室左侧下方杂物盒内（见下图），车辆解锁后若没找到钥匙，请在APP中寻找上一位使用人询问；\n
5.	启动车辆时，踩住刹车，钥匙拧至star档保持3秒松手，仪表绿色ready灯亮即表明车辆启动成功；\n
6.	车辆使用完毕后，请将钥匙放归原位，不要带走；\n
7.	远程开锁不能自动关闭车窗，使用完毕后，切记手动关闭车窗，下车后关锁，并检查是否正常锁车；\n
8.	使用车辆时，必须正确的记录上车地点和下车地点；\n
9.	车辆充电枪放置在后备箱，电量低时请及时充电，电量低于15%时禁止开车；\n
10.使用电动车时，务必注意安全，务必爱护车辆。
    </string>>
</resources>
